--- a/package.json
+++ b/package.json
@@ -5,18 +5,39 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@fortawesome/fontawesome-free-brands": "^5.0.13",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.12",
+    "bulma": "^0.9.1",
+    "disqus-react": "^1.0.10",
     "gatsby": "^2.24.85",
     "gatsby-image": "^2.4.21",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.4.35",
     "gatsby-plugin-offline": "^3.2.37",
     "gatsby-plugin-react-helmet": "^3.3.14",
+    "gatsby-plugin-react-svg": "^3.0.0",
+    "gatsby-plugin-sass": "^2.3.21",
     "gatsby-plugin-sharp": "^2.6.43",
+    "gatsby-plugin-transition-link": "^1.20.5",
     "gatsby-source-filesystem": "^2.3.35",
+    "gatsby-transformer-remark": "^2.8.46",
     "gatsby-transformer-sharp": "^2.5.19",
+    "gsap": "^3.5.1",
+    "html-react-parser": "^0.14.0",
+    "materialize-css": "^1.0.0",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-gsap": "^2.2.1",
+    "react-helmet": "^6.1.0",
+    "react-parallax": "^3.0.3",
+    "react-slick": "^0.27.12",
+    "resolve-url-loader": "^3.1.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "prettier": "2.1.2"
