--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-helmet": "^6.1.0",
     "react-parallax": "^3.0.3",
     "react-slick": "^0.27.12",
+    "react-snow-effect": "^1.2.0",
     "resolve-url-loader": "^3.1.2",
     "slick-carousel": "^1.8.1"
   },
